tests/ui/parser/issue-103451.rs
// error-pattern: this file contains an unclosed delimiter
struct R { }
struct S {
    x: [u8; R
